XWIKI-18304: Misalignment issue and unneeded scroll bar on the Version conflict box
- New strategy to prevent the overflow: defining the containing table as width lower than 100 (e.g., 99.99%) prevents the display of an horizontal scrollbar when a td has a border.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/diff.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/diff.css
@@ -27,12 +27,15 @@
   border: 1px solid $theme.borderColor;
   font-family: Consolas, "Liberation Mono", "Courier New", monospace;
   font-size: 12px;
-  overflow: visible;
+  overflow: auto;
 }
 
 .diff-container table {
   /* Prevent scroll bars when the table fills the entire width. */
   margin: 0;
+  /* Having a table size of 100% leads to the display of an horizontal scroll bar when a td has a border. A 99.99% width
+     is visually indistinguishable but prevent this overflow. */
+  width: 99.99%
 }
 
 .diff-container td {
